WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22641
Calling pauseTransitionAtTimeOnElementWithId() with garbage property name asserts
https://bugs.webkit.org/show_bug.cgi?id=22641
Summary
Calling pauseTransitionAtTimeOnElementWithId() with garbage property name ass...
Simon Fraser (smfr)
Reported
2008-12-03 18:26:59 PST
If a LayoutTest calls pauseTransitionAtTimeOnElementWithId() with an unrecognized property name, like: layoutTestController.pauseTransitionAtTimeOnElementWithId("foopy", 0.5, "target"); it asserts here: ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) (/Volumes/InternalData/Development/webkit/WebKit.git/WebKitBuild/Debug/JavaScriptCore.framework/PrivateHeaders/HashTable.h:455 void WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::checkKey(const T&) [with T = int, HashTranslator = WTF::IdentityHashTranslator<int, std::pair<int, WTF::RefPtr<WebCore::ImplicitAnimation> >, WTF::IntHash<unsigned int> >, Key = int, Value = std::pair<int, WTF::RefPtr<WebCore::ImplicitAnimation> >, Extractor = WTF::PairFirstExtractor<std::pair<int, WTF::RefPtr<WebCore::ImplicitAnimation> > >, HashFunctions = WTF::IntHash<unsigned int>, Traits = WTF::PairHashTraits<WTF::HashTraits<int>, WTF::HashTraits<WTF::RefPtr<WebCore::ImplicitAnimation> > >, KeyTraits = WTF::HashTraits<int>])
Attachments
Patch v1
(1.79 KB, patch)
2008-12-03 19:01 PST
,
Pierre-Olivier Latour
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre-Olivier Latour
Comment 1
2008-12-03 19:01:57 PST
Created
attachment 25732
[details]
Patch v1
Pierre-Olivier Latour
Comment 2
2008-12-04 12:44:48 PST
Sending WebCore/ChangeLog Sending WebCore/page/animation/CompositeAnimation.cpp Transmitting file data .. Committed revision 39002.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug