2008-12-04  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Dan Bernstein.

        Fixed pauseTransitionAtTimeOnElementWithId() in DRT asserting when passed invalid property name
        and potential similar issue with pauseAnimationAtTimeOnElementWithId().

        https://bugs.webkit.org/show_bug.cgi?id=22641

        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimationPrivate::pauseAnimationAtTime):
        (WebCore::CompositeAnimationPrivate::pauseTransitionAtTime):



Canonical link: https://commits.webkit.org/31209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39002 268f45cc-cd09-0410-ab3c-d52691b4dbfc